--- a/settings.json
+++ b/settings.json
@@ -1,20 +1,20 @@
 {
 	"prefix": ".",
 	"lolkey": "registrasi ke webnya",
-	"ownerNumber": "94767043432",
-	"ownerNumberr": "+94767043432",
-	"botnumber": "94767043432",
-	"cr": "Queen Alexa",
+	"ownerNumber": "94770611075",
+	"ownerNumberr": "+94770611075",
+	"botnumber": "94774116154",
+	"cr": "Whatsapp Bot",
 	"yt":"https://youtube.com/",
 	"grub":"https://chat.whatsapp.com/",
-	"wa": "wa.me/+94767043432",
-	"donate": "94767043432",
-	"ig": "https://instagram.com/HYPER_MOD",
-	"gt": "https://github.com/HYPER-MOD",
-	"ownername": "© HYPER-MOD",
-	"botname":"「 Queen Alexa 」",
+	"wa": "wa.me/+94770611075",
+	"donate": "94770611075",
+	"ig": "https://instagram.com/x_pramaya_x",
+	"gt": "https://github.com/BadPramaya",
+	"ownername": "© x_pramaya_x",
+	"botname":"「 Whatsapp Bot 」",
 	"img":"https://k.top4top.io/p_2001zgi471.jpg",
 	"thumb":"thumbnail.jpg",
 	"fakethumb":"fake.jpg",
-	"fake": " 「 queen Alexa 」\n© HYPER-MOD"
+	"fake": " 「 Whatsapp Bot 」\n© x_pramaya_x"
 }
