--- a/settings.json
+++ b/settings.json
@@ -5,12 +5,12 @@
 	"ownerNumberr": "+94770611075",
 	"botnumber": "94774116154",
 	"cr": "Whatsapp Bot",
-	"yt":"https://youtube.com/",
-	"grub":"https://chat.whatsapp.com/",
+	"yt":"https://chat.whatsapp.com/Go9cBxSneUpGDbl6gKdF7E",
+	"grub":"https://chat.whatsapp.com/Go9cBxSneUpGDbl6gKdF7E",
 	"wa": "wa.me/+94770611075",
 	"donate": "94770611075",
 	"ig": "https://instagram.com/x_pramaya_x",
-	"gt": "https://github.com/BadPramaya",
+	"gt": "https://t.me/trxexpertt",
 	"ownername": "© x_pramaya_x",
 	"botname":"「 Whatsapp Bot 」",
 	"img":"https://k.top4top.io/p_2001zgi471.jpg",
